<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.gatech.tcf.ratsighting_app.Controller.AddNewRatSightingReport"
    tools:showIn="@layout/activity_add_new_rat_sighting_report">

    <EditText
        android:id="@+id/newReport_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newReport_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newReport_address" />

    <EditText
        android:id="@+id/newReport_Coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="none"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newReport_Borough" />

    <EditText
        android:id="@+id/newReport_ZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newReport_LocationType" />

    <Spinner
        android:id="@+id/newReport_Borough"
        android:layout_width="213dp"
        android:layout_height="41dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/newReport_ZipCode"
        app:layout_constraintHorizontal_bias="0.795" />

    <Spinner
        android:id="@+id/newReport_LocationType"
        android:layout_width="218dp"
        android:layout_height="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/newReport_city"
        app:layout_constraintHorizontal_bias="0.819" />

    <EditText
        android:id="@+id/newReport_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/newReport_Coordinates"
        android:layout_marginRight="33dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/newReport_SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintRight_toLeftOf="@+id/newReport_CancelButton"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/newReport_AddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address"
        android:textSize="20dp"
        app:layout_constraintRight_toLeftOf="@+id/newReport_address"
        android:layout_marginRight="28dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="37dp" />

    <TextView
        android:id="@+id/newReport_CityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="47dp"
        android:layout_marginTop="40dp"
        android:text="City"
        android:textSize="20dp"
        app:layout_constraintRight_toLeftOf="@+id/newReport_city"
        app:layout_constraintTop_toBottomOf="@+id/newReport_AddressLabel" />

    <TextView
        android:id="@+id/newReport_LocationTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-7dp"
        android:layout_marginTop="24dp"
        android:text="Location Type"
        android:textSize="20dp"
        app:layout_constraintRight_toLeftOf="@+id/newReport_LocationType"
        app:layout_constraintTop_toBottomOf="@+id/newReport_CityLabel" />

    <TextView
        android:id="@+id/newReport_ZipCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="ZipCode"
        android:textSize="20dp"
        app:layout_constraintRight_toLeftOf="@+id/newReport_ZipCode"
        app:layout_constraintTop_toBottomOf="@+id/newReport_LocationTypeLabel" />

    <TextView
        android:id="@+id/newReport_BoroughLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="26dp"
        android:layout_marginTop="37dp"
        android:text="Borough"
        android:textSize="20dp"
        app:layout_constraintRight_toLeftOf="@+id/newReport_Borough"
        app:layout_constraintTop_toBottomOf="@+id/newReport_ZipCodeLabel" />

    <TextView
        android:id="@+id/newReport_CoordinatesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="11dp"
        android:layout_marginTop="41dp"
        android:text="Coordinates"
        android:textSize="20dp"
        app:layout_constraintRight_toLeftOf="@+id/newReport_Coordinates"
        app:layout_constraintTop_toBottomOf="@+id/newReport_BoroughLabel" />

    <TextView
        android:id="@+id/newReport_DateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:textSize="20dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/newReport_SubmitButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/newReport_CoordinatesLabel"
        app:layout_constraintVertical_bias="0.966"
        app:layout_constraintRight_toLeftOf="@+id/newReport_Date"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.594" />

    <Button
        android:id="@+id/newReport_CancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/newReport_Date"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="75dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
